welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not enough arguments for method setDirection: (x$1: plm.universe.Direction)Unit.
Unspecified value parameter x$1.
  if(setDirection()==Direction.EAST()){
                 ^DwarfCode:2: error: not found: value Direction
  if(setDirection()==Direction.EAST()){
                     ^